completed all dashboard html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <p class="sidebar-top-department">Computer Science Department</p>
-            <span class="sidebar-top-online-status"><img src="" alt="green online status">System Online</span>
+            <span class="sidebar-top-online-status"><img src="" alt="green online status">🟢 System Online</span>
         </div>
 
         <div class="sidebar-middle">
@@ -34,7 +34,11 @@
         </div>
 
         <div class="sidebar-bottom">
-            <a href="login.html"><img src="" alt="login icon">Admin Login</a>
+            <ul>
+                <li><a href="admin.html"><img src="" alt="admin icon">Admin Panel</a></li>
+                <li><a href="index.html"><img src="" alt="login icon">Logout Admin</a></li>
+                <li><a href="login.html"><img src="" alt="login icon">Admin Login</a></li>
+            </ul>
         </div>
     </aside>
 
@@ -43,16 +47,18 @@
             <img src="" alt="menu icon">
             <div class="header-left-department-info">
                 <h1>Computer Science Department</h1>
-                <h3>School of Information and Communication Technology</h3>
+                <h4>School of Information and Communication Technology</h4>
             </div>
         </div>
 
         <div class="header-right">
-            <button class="header-search-button">
-                <img src="" alt="search icon">
-            </button>
-            <input class="search-bar" type="text" placeholder="Search announcements, events...">
-
+            <div class="header-search-bar-div">
+                <button class="header-search-button">
+                    <img src="" alt="search icon">
+                </button>
+                <input class="search-bar" type="text" placeholder="Search announcements, events..." value>
+            </div>
+            
             <img src="" alt="notification icon">
             <div class="header-notification-ping"></div>
         </div>
@@ -66,83 +72,83 @@
 
         <div class="main-content">
             <article class="main-announcements">
-                <h2>Recent Announcements</h2>
+                <h3>Recent Announcements</h3>
                 <p>Latest updates from the department</p>
 
                 <div class="article-announcement">
                     <div class="article-announcement-title">
-                        <h2>SICT RAIN SEMESTER EXAM TIMETABLE</h2>
+                        <h3>SICT RAIN SEMESTER EXAM TIMETABLE</h3>
                         <div>Urgent</div>
                         <div>Exam</div>
                     </div>
                     <p>The SICT Rain Semester examination schedule for all CSC courses has been released. Please check your timetable section foe detailed schedule.</p>
-                    <p>2025-08-28</p>
+                    <p class="feint-text">2025-08-28</p>
                 </div>
 
                 <div class="article-announcement">
                     <div class="article-announcement-title">
-                        <h2>EXAMINATION POSTPONEMENT NOTICE</h2>
+                        <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
                         <div>Urgent</div>
                         <div>Exam</div>
                     </div>
                     <p>Due to unforseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation.</p>
-                    <p>2025-09-01</p>
+                    <p class="feint-text">2025-09-01</p>
                 </div>
 
                 <div class="article-announcement">
                     <div class="article-announcement-title">
-                        <h2>GUEST WORKSHOP: ADVANCED COMPUTING TECHNIQUES</h2>
+                        <h3>GUEST WORKSHOP: ADVANCED COMPUTING TECHNIQUES</h3>
                         <div>event</div>
                     </div>
                     <p>Join us for an exciting workshop hosted by Prof. Onojo Ondoma with speakers Ihekwuaba Success (UI/UX) and Mbamara Joshua (Cloud Computing). Date: September 5, 2025, Time: 2:00PM, Venue: SMAT auditorium.</p>
-                    <p>2025-08-25</p>
+                    <p class="feint-text">2025-08-25</p>
                 </div>
 
                 <div class="article-announcement">
                     <div class="article-announcement-title">
-                        <h2>PROGRAMMING COMPETITION WINNERS ANNOUNCED</h2>
+                        <h3>PROGRAMMING COMPETITION WINNERS ANNOUNCED</h3>
                         <div>event</div>
                     </div>
                     <p>Congratulations to the winners of the Annual Computer Programming Competition! 1st Place: Mbamara Joshua Elochukwu, 2nd Place: Mgbeahuru Valentine, 3rd Place: Mbamara Blessing. Other notable winners include Ndubuisi Divine, Mbam Cephas, and Ndukwe Testimony. Winners will receive certificates and cash prizes.</p>
-                    <p>2025-08-20</p>
+                    <p class="feint-text">2025-08-20</p>
                 </div>
 
                 <div class="article-announcement">
                     <div class="article-announcement-title">
-                        <h2>INTERNSHIP OPPORTUNITIES AT TECH COMPANIES</h2>
+                        <h3>INTERNSHIP OPPORTUNITIES AT TECH COMPANIES</h3>
                         <div>opportunity</div>
                     </div>
                     <p>Several tech companies are offering internship positions for computer science students. Application deadline: September 15, 2025.</p>
-                    <p>2025-08-18</p>
+                    <p class="feint-text">2025-08-18</p>
                 </div>
             </article>
 
             <aside>
                 <div class="aside-upcoming-events">
-                    <h2>Upcoming Events</h2>
+                    <h3>Upcoming Events</h3>
                     <p>Don't miss these important events</p>
 
                     <div class="aside-event">
-                        <img src="" alt="calender icon">
+                        <img src="" alt="calender icon green">
                         <div class="aside-event-details">
                             <h3>Programming Contest</h3>
-                            <p>2025-09-10 at 10:00 AM</p>
+                            <p class="feint-text">2025-09-10 at 10:00 AM</p>
                         </div>
                     </div>
 
                     <div class="aside-event">
-                        <img src="" alt="calender icon">
+                        <img src="" alt="calender icon green">
                         <div class="aside-event-details">
                             <h3>Career Fair</h3>
-                            <p>2025-09-15 at 9:00 AM</p>
+                            <p class="feint-text">2025-09-15 at 9:00 AM</p>
                         </div>
                     </div>
 
                     <div class="aside-event">
-                        <img src="" alt="calender icon">
+                        <img src="" alt="calender icon green">
                         <div class="aside-event-details">
                             <h3>Alumni Meetup</h3>
-                            <p>2025-09-20 at 6:00 PM</p>
+                            <p class="feint-text">2025-09-20 at 6:00 PM</p>
                         </div>
                     </div>
 
@@ -177,7 +183,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 G12Schools | School Imformation Board | All rights reserved.</p>
+        <p>&copy; 2025 G12Schools - Student Information Board - All rights reserved.</p>
     </footer>
 
 </body>
