--- a/frontend/announcement.html
+++ b/frontend/announcement.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G12Schools</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/announcement.css">
 </head>
 <body>
     <aside class="sidebar">
@@ -163,7 +165,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 G12Schools - Student Information Board - All rights reserved.</p>
+        <p>&copy; 2025 G12Schools • Student Information Board • All rights reserved.</p>
     </footer>
 </body>
 </html>
