--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,7 +129,7 @@
                     <p>Don't miss these important events</p>
 
                     <div class="aside-event">
-                        <img src="" alt="calender icon green">
+                        <img src="" alt="events icon green">
                         <div class="aside-event-details">
                             <h3>Programming Contest</h3>
                             <p class="feint-text">2025-09-10 at 10:00 AM</p>
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="aside-event">
-                        <img src="" alt="calender icon green">
+                        <img src="" alt="events icon green">
                         <div class="aside-event-details">
                             <h3>Career Fair</h3>
                             <p class="feint-text">2025-09-15 at 9:00 AM</p>
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="aside-event">
-                        <img src="" alt="calender icon green">
+                        <img src="" alt="events icon green">
                         <div class="aside-event-details">
                             <h3>Alumni Meetup</h3>
                             <p class="feint-text">2025-09-20 at 6:00 PM</p>
@@ -183,7 +183,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 G12Schools - Student Information Board - All rights reserved.</p>
+        <p>&copy; 2025 G12Schools • Student Information Board • All rights reserved.</p>
     </footer>
 
 </body>
