--- a/frontend/login.html
+++ b/frontend/login.html
@@ -20,7 +20,7 @@
             <label for="password">Password</label>
             <input id="password" type="password" placeholder="Enter password" required />
 
-            <button type="submit">Login to Admin Portal</button>
+            <button type="submit"><a href="admin.html">Login to Admin Portal</a></button>
         </form>
 
         <div class="demo-details">
