--- a/frontend/events.html
+++ b/frontend/events.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G12Schools</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/events.css">
 </head>
 <body>
     <aside class="sidebar">
@@ -17,7 +19,7 @@
             </div>
 
             <p class="sidebar-top-department">Computer Science Department</p>
-            <span class="sidebar-top-online-status"><img src="" alt="green online status">System Online</span>
+            <span class="sidebar-top-online-status"><img src="" alt="green online status">🟢 System Online</span>
         </div>
 
         <div class="sidebar-middle">
@@ -32,7 +34,11 @@
         </div>
 
         <div class="sidebar-bottom">
-            <a href="login.html"><img src="" alt="login icon">Admin Login</a>
+            <ul>
+                <li><a href="admin.html"><img src="" alt="admin icon">Admin Panel</a></li>
+                <li><a href="index.html"><img src="" alt="login icon">Logout Admin</a></li>
+                <li><a href="login.html"><img src="" alt="login icon">Admin Login</a></li>
+            </ul>
         </div>
     </aside>
 
@@ -41,16 +47,18 @@
             <img src="" alt="menu icon">
             <div class="header-left-department-info">
                 <h1>Computer Science Department</h1>
-                <h3>School of Information and Communication Technology</h3>
+                <h4>School of Information and Communication Technology</h4>
             </div>
         </div>
 
         <div class="header-right">
-            <button class="header-search-button">
-                <img src="" alt="search icon">
-            </button>
-            <input class="search-bar" type="text" placeholder="Search announcements, events...">
-
+            <div class="header-search-bar-div">
+                <button class="header-search-button">
+                    <img src="" alt="search icon">
+                </button>
+                <input class="search-bar" type="text" placeholder="Search announcements, events..." value>
+            </div>
+            
             <img src="" alt="notification icon">
             <div class="header-notification-ping"></div>
         </div>
@@ -67,18 +75,169 @@
             </div>
 
             <div class="event-month-list-toggle">
-                <p>Month</p>
-                <p>List</p>
+                <button>Month</button>
+                <button>List</button>
             </div>
         </div>
 
         <div class="event-calendar">
+            <div class="event-navigate-month">
+                <div class="event-previous-month-div">
+                    <img src="" alt="previous month">
+                </div>
+                <h3>October 2025</h3>
+                <div class="event-next-month-div">
+                    <img src="" alt="next month">
+                </div>
+            </div>
 
+            <div class="event-calendar-grid">
+                <div class="">Sun</div>
+                <div class="">Mon</div>
+                <div class="">Tue</div>
+                <div class="">Wed</div>
+                <div class="">Thu</div>
+                <div class="">Fri</div>
+                <div class="">Sat</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="">
+                    <div class="">1</div>
+                    <div class="">
+                        <div class="">Project Submission Deadline</div>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="">2</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">3</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">4</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">5</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">6</div>
+                    <div class="">
+                        <div class="">Guest Lecture: AI Ethics</div>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="">7</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">8</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">9</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">10</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">11</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">12</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">13</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">14</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">15</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">16</div>
+                    <div class="">
+                        <div class="">Departmental Dues Payment</div>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="">17</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">18</div>
+                    <div class=""></div>
+                </div>
+                <div class=" ">
+                    <div class="">19</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">20</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">21</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">22</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">23</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">24</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">25</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">26</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">27</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">28</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">29</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">30</div>
+                    <div class=""></div>
+                </div>
+                <div class="">
+                    <div class="">31</div>
+                    <div class=""></div>
+                </div>
+            </div>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 G12Schools | School Imformation Board | All rights reserved.</p>
+        <p>&copy; 2025 G12Schools • School Imformation Board • All rights reserved.</p>
     </footer>
     
 </body>
