Added header and sidebar desktop styles and updated all html pages for it.

--- a/frontend/pages/events.html
+++ b/frontend/pages/events.html
@@ -4,63 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G12Schools</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/events.css">
 </head>
 <body>
     <aside class="sidebar">
         <div class="sidebar-top">
             <div class="sidebar-top-website-info">
-                <img src="" alt="G12Schools logo">
+                <img src="../assets/logo.jpg" alt="G12Schools logo">
                 <div class="website-description">
                     <h2>G12Schools</h2>
-                    <h4>Student Information Board</h4>
+                    <p>Student Information Board</p>
                 </div>
             </div>
 
             <p class="sidebar-top-department">Computer Science Department</p>
-            <span class="sidebar-top-online-status"><img src="" alt="green online status">🟢 System Online</span>
+            <div class="sidebar-top-online-status">🟢 System Online</div>
         </div>
 
         <div class="sidebar-middle">
             <ul>
-                <li><a href="index.html"><img src="" alt="dashboard icon">Dashboard</a></li>
-                <li><a href="announcement.html"><img src="" alt="announcements icon">Announcements</a></li>
-                <li><a href="events.html"><img src="" alt="events icon">Events</a></li>
-                <li><a href="timetable.html"><img src="" alt="timetable icon">Timetable</a></li>
-                <li><a href="results.html"><img src="" alt="results icon">Results</a></li>
-                <li><a href="archive.html"><img src="" alt="archive icon">Archive</a></li>
+                <li><a href="index.html"><img src="../assets/icons/home.png" alt="dashboard icon">Dashboard</a></li>
+                <li><a href="announcement.html"><img src="../assets/icons/notification.png" alt="announcements icon">Announcements</a></li>
+                <li><a href="events.html"><img src="../assets/icons/calendar.png" alt="events icon">Events</a></li>
+                <li><a href="timetable.html"><img src="../assets/icons/timetable.png" alt="timetable icon">Timetable</a></li>
+                <li><a href="results.html"><img src="../assets/icons/result.png" alt="results icon">Results</a></li>
+                <li><a href="archive.html"><img src="../assets/icons/archive.png" alt="archive icon">Archive</a></li>
             </ul>
         </div>
 
         <div class="sidebar-bottom">
             <ul>
-                <li><a href="admin.html"><img src="" alt="admin icon">Admin Panel</a></li>
-                <li><a href="index.html"><img src="" alt="login icon">Logout Admin</a></li>
-                <li><a href="login.html"><img src="" alt="login icon">Admin Login</a></li>
+                <li><a href="admin.html"><img src="../assets/icons/admin.png" alt="admin icon">Admin Panel</a></li>
+                <li><a href="index.html"><img src="../assets/icons/login.png" alt="login icon">Logout Admin</a></li>
+                <li><a href="login.html"><img src="../assets/icons/login.png" alt="login icon">Admin Login</a></li>
             </ul>
         </div>
     </aside>
 
     <header>
         <div class="header-left">
-            <img src="" alt="menu icon">
+            <img src="../assets/icons/menu.png" alt="menu icon">
             <div class="header-left-department-info">
-                <h1>Computer Science Department</h1>
-                <h4>School of Information and Communication Technology</h4>
+                <img src="../assets/logo.jpg" alt="G12 Logo">
+                <div>
+                    <h2>Computer Science Department</h2>
+                    <p>School of Information and Communication Technology</p>
+                </div>
             </div>
         </div>
 
         <div class="header-right">
             <div class="header-search-bar-div">
-                <button class="header-search-button">
-                    <img src="" alt="search icon">
-                </button>
+                <div class="header-search-icon">
+                    <img src="../assets/icons/search.png" alt="search icon">
+                </div>
                 <input class="search-bar" type="text" placeholder="Search announcements, events..." value>
             </div>
             
-            <img src="" alt="notification icon">
-            <div class="header-notification-ping"></div>
+            <div class="header-notification">
+                <img src="../assets/icons/notification.png" alt="notification icon">
+                <div class="header-notification-ping"></div>
+            </div>
         </div>
     </header>
 
