removed the comment from aside

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-    <!-- <aside class="sidebar">
+    <aside class="sidebar">
         <div class="sidebar-top">
             <div class="sidebar-top-website-info">
                 <img src="../assets/logo.jpg" alt="G12Schools logo">
@@ -40,7 +40,7 @@
                 <li><a href="login.html"><img src="../assets/icons/login.png" alt="login icon">Admin Login</a></li>
             </ul>
         </div>
-    </aside> -->
+    </aside>
 
     <header>
         <div class="header-left">
