--- a/frontend/timetable.html
+++ b/frontend/timetable.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G12Schools</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/timetable.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/timetable.css">
 </head>
 <body>
     <aside class="sidebar">
         <div class="sidebar-top">
             <div class="sidebar-top-website-info">
-                <img src="../assets/logo.jpg" alt="G12Schools logo">
+                <img src="assets/logo.jpg" alt="G12Schools logo">
                 <div class="website-description">
                     <h2>G12Schools</h2>
                     <p>Student Information Board</p>
@@ -24,29 +24,29 @@
 
         <div class="sidebar-middle">
             <ul>
-                <li><a href="index.html"><img src="../assets/icons/home.png" alt="dashboard icon">Dashboard</a></li>
-                <li><a href="announcement.html"><img src="../assets/icons/notification.png" alt="announcements icon">Announcements</a></li>
-                <li><a href="events.html"><img src="../assets/icons/calendar.png" alt="events icon">Events</a></li>
-                <li><a href="timetable.html"><img src="../assets/icons/timetable.png" alt="timetable icon">Timetable</a></li>
-                <li><a href="results.html"><img src="../assets/icons/result.png" alt="results icon">Results</a></li>
-                <li><a href="archive.html"><img src="../assets/icons/archive.png" alt="archive icon">Archive</a></li>
+                <li><a href="index.html"><img src="assets/icons/home.png" alt="dashboard icon">Dashboard</a></li>
+                <li><a href="announcement.html"><img src="assets/icons/notification.png" alt="announcements icon">Announcements</a></li>
+                <li><a href="events.html"><img src="assets/icons/calendar.png" alt="events icon">Events</a></li>
+                <li><a href="timetable.html"><img src="assets/icons/timetable.png" alt="timetable icon">Timetable</a></li>
+                <li><a href="results.html"><img src="assets/icons/result.png" alt="results icon">Results</a></li>
+                <li><a href="archive.html"><img src="assets/icons/archive.png" alt="archive icon">Archive</a></li>
             </ul>
         </div>
 
         <div class="sidebar-bottom">
             <ul>
-                <li><a href="admin.html"><img src="../assets/icons/admin.png" alt="admin icon">Admin Panel</a></li>
-                <li><a href="index.html"><img src="../assets/icons/login.png" alt="login icon">Logout Admin</a></li>
-                <li><a href="login.html"><img src="../assets/icons/login.png" alt="login icon">Admin Login</a></li>
+                <li><a href="admin.html"><img src="assets/icons/admin.png" alt="admin icon">Admin Panel</a></li>
+                <li><a href="index.html"><img src="assets/icons/login.png" alt="login icon">Logout Admin</a></li>
+                <li><a href="login.html"><img src="assets/icons/login.png" alt="login icon">Admin Login</a></li>
             </ul>
         </div>
     </aside>
 
     <header>
         <div class="header-left">
-            <img src="../assets/icons/menu.png" alt="menu icon">
+            <img src="assets/icons/menu.png" alt="menu icon">
             <div class="header-left-department-info">
-                <img src="../assets/logo.jpg" alt="G12 Logo">
+                <img src="assets/logo.jpg" alt="G12 Logo">
                 <div>
                     <h2>Computer Science Department</h2>
                     <p>School of Information and Communication Technology</p>
@@ -57,13 +57,13 @@
         <div class="header-right">
             <div class="header-search-bar-div">
                 <div class="header-search-icon">
-                    <img src="../assets/icons/search.png" alt="search icon">
+                    <img src="assets/icons/search.png" alt="search icon">
                 </div>
                 <input class="search-bar" type="text" placeholder="Search announcements, events..." value>
             </div>
             
             <div class="header-notification">
-                <img src="../assets/icons/notification.png" alt="notification icon">
+                <img src="assets/icons/notification.png" alt="notification icon">
                 <div class="header-notification-ping"></div>
             </div>
         </div>
