Complete HTML for announcement page

--- a/frontend/announcement.html
+++ b/frontend/announcement.html
@@ -71,99 +71,101 @@
         </header>
 
         <main>
-            <div class="main-announcement-description">
-                <div class="main-announcement-head">
-                    <img src="" alt="notification icon">
-                    <h3>Department Announcements</h3>
-                </div>
-                <p>Stay updated with the latest news and important information</p>
-                <div class="main-announcement-filter">
-                    <button type="button">
-                        <span data-slot="select-value" style="pointer-events: none;">All Types</span>
-                        <img src="" alt="dropdown icon">
-                    </button>
-                    
-                    <button type="button">
-                        <span data-slot="select-value" style="pointer-events: none;">All Priorities</span>
-                        <img src="" alt="dropdown icon">
-                    </button>
-
-                    <button type="button">
-                        <span data-slot="select-value" style="pointer-events: none;">Sort by Date</span>
-                        <img src="" alt="dropdown icon">
-                    </button>
-                </div>
-            </div>
-
-            <div class="main-announcement-div">
-                <div class="main-announcement">
-                    <div class="announcement-title">
-                        <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
-                        <div>
-                            <p>high priority</p>
-                            <p>urgent</p>
-                        </div>
+            <div class="announcement-page">
+                <div class="main-announcement-description">
+                    <div class="main-announcement-head">
+                        <img src="assets/icons/notification.png" alt="notification icon">
+                        <h3>Department Announcements</h3>
                     </div>
+                    <p>Stay updated with the latest news and important information</p>
+                    <div class="main-announcement-filter">
+                        <button type="button">
+                            <div>All Types</div>
+                            <img src="assets/icons/dropdown.png" alt="dropdown icon">
+                        </button>
+                        
+                        <button type="button">
+                            <div>All Priorities</div>
+                            <img src="assets/icons/dropdown.png" alt="dropdown icon">
+                        </button>
 
-                    <div class="announcement-message"> 
-                        Due to unforeseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation and stay updated through official channels.
-                    </div>
-
-                    <div class="announcement-details">
-                        <div>Academic Office - 9/1/2025</div>
-
-                        <div>
-                            <p>urgent</p>
-                            <p>examnination</p>
-                            <p>postponement</p>
-                        </div>
+                        <button type="button">
+                            <div>Sort by Date</div>
+                            <img src="assets/icons/dropdown.png" alt="dropdown icon">
+                        </button>
                     </div>
                 </div>
 
-                <div class="main-announcement">
-                    <div class="announcement-title">
-                        <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
-                        <div>
-                            <p>high priority</p>
-                            <p>urgent</p>
+                <div class="main-announcement-div">
+                    <div class="main-announcement">
+                        <div class="announcement-title">
+                            <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
+                            <div>
+                                <p>high priority</p>
+                                <p>urgent</p>
+                            </div>
+                        </div>
+
+                        <div class="announcement-message"> 
+                            Due to unforeseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation and stay updated through official channels.
+                        </div>
+
+                        <div class="announcement-details">
+                            <div>Academic Office - 9/1/2025</div>
+
+                            <div>
+                                <p>urgent</p>
+                                <p>examnination</p>
+                                <p>postponement</p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="announcement-message"> 
-                        Due to unforeseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation and stay updated through official channels.
-                    </div>
+                    <div class="main-announcement">
+                        <div class="announcement-title">
+                            <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
+                            <div>
+                                <p>high priority</p>
+                                <p>urgent</p>
+                            </div>
+                        </div>
 
-                    <div class="announcement-details">
-                        <div>Academic Office - 9/1/2025</div>
+                        <div class="announcement-message"> 
+                            Due to unforeseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation and stay updated through official channels.
+                        </div>
 
-                        <div>
-                            <p>urgent</p>
-                            <p>examnination</p>
-                            <p>postponement</p>
+                        <div class="announcement-details">
+                            <div>Academic Office - 9/1/2025</div>
+
+                            <div>
+                                <p>urgent</p>
+                                <p>examnination</p>
+                                <p>postponement</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="main-announcement">
-                    <div class="announcement-title">
-                        <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
-                        <div>
-                            <p>high priority</p>
-                            <p>urgent</p>
+                    <div class="main-announcement">
+                        <div class="announcement-title">
+                            <h3>EXAMINATION POSTPONEMENT NOTICE</h3>
+                            <div>
+                                <p>high priority</p>
+                                <p>urgent</p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="announcement-message"> 
-                        Due to unforeseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation and stay updated through official channels.
-                    </div>
+                        <div class="announcement-message"> 
+                            Due to unforeseen circumstances, all scheduled examinations have been postponed from September 15th to September 22nd, 2025. New examination schedule will be released shortly. Students are advised to continue their preparation and stay updated through official channels.
+                        </div>
 
-                    <div class="announcement-details">
-                        <div>Academic Office - 9/1/2025</div>
+                        <div class="announcement-details">
+                            <div>Academic Office - 9/1/2025</div>
 
-                        <div>
-                            <p>urgent</p>
-                            <p>examnination</p>
-                            <p>postponement</p>
+                            <div>
+                                <p>urgent</p>
+                                <p>examnination</p>
+                                <p>postponement</p>
+                            </div>
                         </div>
                     </div>
                 </div>
